// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
    <MandatoryFieldMarker />
  </div>
  <div
    className="settings-definition-right big-padded-top display-flex-column"
  >
    <ValidationInput
      errorPlacement={1}
      isInvalid={false}
      isValid={false}
    >
      <input
        className="width-100"
        id="key"
        maxLength={40}
        name="key"
        onChange={[Function]}
        size={50}
        type="text"
        value="key"
      />
    </ValidationInput>
  </div>
</div>
`;

exports[`should render correctly: encryptable 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
    <MandatoryFieldMarker />
  </div>
  <div
    className="settings-definition-right big-padded-top display-flex-column"
  >
    <ValidationInput
      errorPlacement={1}
      isInvalid={false}
      isValid={false}
    >
      <input
        className="width-100"
        id="key"
        maxLength={40}
        name="key"
        onChange={[Function]}
        size={50}
        type="text"
        value="key"
      />
    </ValidationInput>
    <Alert
      className="spacer-top"
      variant="info"
    >
      <FormattedMessage
        defaultMessage="settings.almintegration.form.secret.can_encrypt"
        id="settings.almintegration.form.secret.can_encrypt"
        values={
          {
            "learn_more": <withAppStateContext(DocLink)
              to="/instance-administration/security/#settings-encryption"
            >
              learn_more
            </withAppStateContext(DocLink)>,
          }
        }
      />
    </Alert>
  </div>
</div>
`;

exports[`should render correctly: invalid with error 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
    <MandatoryFieldMarker />
  </div>
  <div
    className="settings-definition-right big-padded-top display-flex-column"
  >
    <ValidationInput
      error="some error message"
      errorPlacement={1}
      isInvalid={true}
      isValid={false}
    >
      <input
        className="width-100"
        id="key"
        maxLength={40}
        name="key"
        onChange={[Function]}
        size={50}
        type="text"
        value="key"
      />
    </ValidationInput>
  </div>
</div>
`;

exports[`should render correctly: optional 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
  </div>
  <div
    className="settings-definition-right big-padded-top display-flex-column"
  >
    <ValidationInput
      errorPlacement={1}
      isInvalid={false}
      isValid={false}
    >
      <input
        className="width-100"
        id="key"
        maxLength={40}
        name="key"
        onChange={[Function]}
        size={50}
        type="text"
        value="key"
      />
    </ValidationInput>
  </div>
</div>
`;

exports[`should render correctly: secret 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
    <MandatoryFieldMarker />
  </div>
  <div
    className="settings-definition-right big-padded-top display-flex-column"
  >
    <div>
      <p>
        settings.almintegration.form.secret.field
      </p>
      <ButtonLink
        onClick={[Function]}
      >
        settings.almintegration.form.secret.update_field
      </ButtonLink>
    </div>
  </div>
</div>
`;

exports[`should render correctly: textarea 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
    <MandatoryFieldMarker />
  </div>
  <div
    className="settings-definition-right big-padded-top display-flex-column"
  >
    <textarea
      className="width-100"
      id="key"
      maxLength={40}
      onChange={[Function]}
      required={true}
      rows={5}
      value="key"
    />
  </div>
</div>
`;

exports[`should render correctly: with help 1`] = `
<div
  className="settings-definition"
>
  <div
    className="settings-definition-left"
  >
    <label
      className="h3"
      htmlFor="key"
    >
      settings.almintegration.form.key
    </label>
    <MandatoryFieldMarker />
    <div
      className="markdown small spacer-top"
    >
      help
    </div>
  </div>
  <div
    className="settings-definition-right big-padded-top display-flex-column"
  >
    <ValidationInput
      errorPlacement={1}
      isInvalid={false}
      isValid={false}
    >
      <input
        className="width-100"
        id="key"
        maxLength={40}
        name="key"
        onChange={[Function]}
        size={50}
        type="text"
        value="key"
      />
    </ValidationInput>
  </div>
</div>
`;
